--- a/HTML/experiment_1/copy.html
+++ b/HTML/experiment_1/copy.html
@@ -109,9 +109,9 @@
             <TR>
                 <th>Wednesday</th>
                 <td colspan="2">BCSC0801<br>ABVIII-425<br></td>
-                <td colspan="2">2FH(LE)1/BCSC0804<br>ABII-5002<br><hr>2FH(LE)2/BCSC0804<br>ABII-5004<br><hr>2FH(LE)3/BCSC0804<br>ABII-5005</td>
+                <td colspan="2">2FH(LE)1/BCSC0804<br>ABII-5002<br><hr colspan="2">2FH(LE)2/BCSC0804<br>ABII-5004<br><hr>2FH(LE)3/BCSC0804<br>ABII-5005</td>
                 <td></td>
-                <td colspan="0">2FH1/BCSC1010<br>ABIII-425<br><hr rowspan="2">2FH(LE)1/BELHB1010<br>ABVIII-425</td>
+                <td colspan="0">2FH1/BCSC1010<br>ABIII-425<br><hr>2FH(LE)1/BELHB1010<br>ABVIII-425</td>
                 <td></td>
                 <td>2FH(LE)2/BELHB020<br>ABVIII-431 <br> <hr>2FH(LE)2/BELHB0020<br>ABVIII-425</td>
                 <td></td>
