--- a/HTML/EXPERIMENT/EXPERIMENT 2/index.html
+++ b/HTML/EXPERIMENT/EXPERIMENT 2/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>About Us | NovaTech Atelier</title>
+    <title>AI FUTURE websites</title>
     <link rel="stylesheet" href="../EXPERIMENT 2/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&family=Playfair+Display:wght@600;700&display=swap"
@@ -23,12 +23,14 @@
     <main class="container" role="main">
       <!-- Who we are -->
       <section class="section card" id="about">
+        <div class="intro">
         <h2 class="section-title">Artificial Intelligence</h2>
         <p class="lead">
           Artificial Intelligence is reshaping industries and redefining human
           potential. It empowers businesses to innovate faster, smarter, and
           more efficiently. From healthcare to automation.
         </p>
+        </div>
         <p>
           AI is unlocking solutions once thought impossible. The future of AI is
           not about replacing humans, but working alongside them. Together, we
