--- a/HTML/Chess/index.html
+++ b/HTML/Chess/index.html
@@ -10,7 +10,7 @@
       justify-content: center;
       align-items: center;
       height: 100vh;
-      background: #e0e0e0;
+      background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
       margin: 0;
     }
     .chessboard {
